<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_rate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    android:background="@drawable/shadow_bg_8dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextView.Large.Black.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rate_title" />

        <TextView
            style="@style/AppTheme.TextView.Medium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/rate_subtitle" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_rate_app"
        style="@style/AppTheme.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_button"
        tools:targetApi="lollipop" />

</LinearLayout>