<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/about_info"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <TextView
        android:id="@+id/tv_social_network_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/about_social_networks"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about" />

    <!--<TextView-->
    <!--android:id="@+id/tv_subscribe"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:fontFamily="sans-serif"-->
    <!--android:text="@string/about_subscribe"-->
    <!--android:textColor="#000000"-->
    <!--android:textSize="14sp"-->
    <!--android:textStyle="normal"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/tv_social_network_title" />-->

    <Button
        android:id="@+id/bt_telegram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/telegram_bg"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/about_telegram"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/bt_vk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_vk"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/bt_vk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/vkontakte_bg"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/about_vkontakte"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/bt_fb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_telegram"
        app:layout_constraintTop_toBottomOf="@+id/tv_social_network_title"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/bt_fb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook_bg"
        android:fontFamily="sans-serif"
        android:stateListAnimator="@null"
        android:text="@string/about_facebook"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_vk"
        app:layout_constraintTop_toTopOf="@+id/bt_vk"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/bt_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/review_bg"
        android:stateListAnimator="@null"
        android:text="@string/about_review"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />


</android.support.constraint.ConstraintLayout>