<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_genre_title"
        style="@style/AppTheme.TextView.MovieInfo.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_genre_value"
        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_genre_title"
        app:layout_constraintTop_toTopOf="@+id/tv_genre_title"
        tools:text="Исторический, драма, военный" />

    <TextView
        android:id="@+id/tv_language_title"
        style="@style/AppTheme.TextView.MovieInfo.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/movie_language_title"
        app:layout_constraintStart_toStartOf="@+id/tv_genre_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_value" />

    <TextView
        android:id="@+id/tv_language_value"
        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toEndOf="@+id/tv_language_title"
        app:layout_constraintTop_toTopOf="@+id/tv_language_title"
        tools:text="Английский" />

    <TextView
        android:id="@+id/tv_durability_title"
        style="@style/AppTheme.TextView.MovieInfo.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/movie_durability_title"
        app:layout_constraintStart_toStartOf="@+id/tv_language_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_language_value" />

    <TextView
        android:id="@+id/tv_durability_value"
        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toEndOf="@+id/tv_durability_title"
        app:layout_constraintTop_toTopOf="@+id/tv_durability_title"
        tools:text="2 ч 5 мин" />

    <TextView
        android:id="@+id/tv_age_title"
        style="@style/AppTheme.TextView.MovieInfo.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/movie_age_title"
        app:layout_constraintStart_toStartOf="@+id/tv_durability_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_durability_value" />

    <TextView
        android:id="@+id/tv_age_value"
        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toEndOf="@+id/tv_age_title"
        app:layout_constraintTop_toTopOf="@+id/tv_age_title"
        tools:text="16+" />

    <TextView
        android:id="@+id/tv_rating_title"
        style="@style/AppTheme.TextView.MovieInfo.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/movie_rating_kinopoisk_title"
        app:layout_constraintStart_toStartOf="@+id/tv_age_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_age_value" />

    <TextView
        android:id="@+id/tv_rating_value"
        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toEndOf="@+id/tv_rating_title"
        app:layout_constraintTop_toTopOf="@+id/tv_rating_title"
        tools:text="7.5" />

    <TextView
        android:id="@+id/tv_description_title"
        style="@style/AppTheme.TextView.Huge.Title.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_description_title"
        app:layout_constraintStart_toStartOf="@+id/tv_rating_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_title" />

    <TextView
        android:id="@+id/tv_description_value"
        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_description_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
        tools:text="История о первом и решающем шаге Уинстона Черчилля на посту премьер-министра Великобритании, получившего власть при чрезвычайных обстоятельствах. Успехи нацистской армии взбудоражили британское сообщество, но вопреки давлению и страху других политиков Черчилль отказывается идти на соглашение с Гитлером." />

</androidx.constraintlayout.widget.ConstraintLayout>